# sfs

./: Cargo.toml
src/: main.rs
src/modules/: moderation.rs  util.rs
src/utils/: data.rs  embeds.rs  env.rs  logging.rs  mod.rs
