[package]
name = "sfs"
version = "0.1.0"
authors = ["Skye Elliot <actuallyori@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
diesel = { version = "1.0.0", features = ["postgres"] }
fern = { version = "0.5", features = ["colored"]}
log = "0.4"
serenity = "0.8"
url = "^2.1.1"